<resources>
    <string name="app_name">MMPR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="y">y =</string>
    <string name="laba2_formula">tg(x) + \u0012</string>
    <string name="laba3_and_4_formula">11x\u2081\u00B2 + 3x\u2082\u00B2 + 6x\u2081x\u2082 - 2(sqrt(10)(x\u2081 - 3x\u2082) - 22</string>
    <string name="eps">Eps =</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="change">Change</string>
    <string name="change_eps">Change eps</string>
    <string name="apply">Apply</string>
</resources>
